- Fix resizing issues on safari ios scroll

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 html,
 body {
   overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 canvas {
@@ -51,12 +52,12 @@ span {
 
 body {
   height: 100%;
-  overflow-x: hidden;
   background-color: var(--black);
 }
 
 main {
   height: 100%;
+  max-width: 100vw;
 }
 
 body::-webkit-scrollbar {
@@ -73,7 +74,10 @@ section {
   background-color: var(--white);
   max-height: 100%;
   z-index: 50;
-  height: calc(var(--vh, 1vh) * 100);
+  max-height: calc(var(--vh, 1vh) * 100);
+  height: 100%;
+  min-height: 100%;
+  overflow: hidden;
 }
 
 .button {
@@ -102,7 +106,7 @@ section {
 
 .scrollSectionY {
   width: 100vw;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   height: "100%";
 }
 
@@ -1083,4 +1087,42 @@ section {
   }
 }
 
+/*   #endregion   */
+
+/* Dialogue */ /*   #region   */
+#orientationDialog {
+  position: absolute;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  padding: 0 3em 0 3em;
+  z-index: 10000;
+  width: calc(100% - 6em);
+  background: var(--grey);
+  display: none;
+}
+
+#orientationDialog.show {
+  display: flex;
+}
+
+.dialogButtonRow {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 1em 0;
+}
+
+.dialogButton {
+  color: #1e1e1e;
+}
+
+#orientationDialog p {
+  color: var(--white);
+  line-height: 1.5em;
+  padding: 0 1em;
+  text-align: justify;
+  font-size: 24px;
+}
 /*   #endregion   */
